[package]
name = "fo_data"
version = "0.2.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sled-retriever = ["sled"]

[dependencies]
nom_prelude = { git = "https://github.com/fonline-rust/format_extras.git" }
fformat_utils = { git = "https://github.com/fonline-rust/format_extras.git" }
zip = { version = "0.6", default-features = false, features = ["deflate"]}
itertools = "0.12"
#array-macro = "1.0"
#derivative = "1.0"
debug-helper = "0.3"
rayon = "1.5"
image = { version = "0.24", default-features = false, features = ["png"] }
once_cell = "1.2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
#ron = "0.6"
bincode = "1.3"
parking_lot = "0.12"
thiserror = "1"
nohash-hasher = "0.2"
crc32fast = "1"
walkdir = "2"

sled = { version = "0.34", features = ["compression"], optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "main_bench"
harness = false

[workspace]
members = ["tools/unused_art"]
